Bug 336081, Crash [@ nsHTMLEditRules::WillOutdent], r=neil, sr=peterv